# atoms-agents

./: .cfignore  .clinerules  .cursorrules  .gitignore  AGENTS.md  ATOMIC_TASKS.md  DOCS_MIGRATION_STRATEGY.md  HANDOFF_README.md  REALTIME_INTEGRATION_MAP.md  ROUTING_EVENT_INFRASTRUCTURE_INVENTORY.md  SETUP_LOG.md  THE_NORTHSTAR.MD  atoms_core  atoms_muscle  audit_state.sh  merge_sync.sh  proof_swap.py  pyproject.toml  start_api.sh  start_workbench.sh  sync-universe.sh
agents-services/junior-agent-security/: JuniorAgentSecurity.spec  SKILL.md  build_app.py  manifest.json  pyproject.toml
agents-services/junior-agent-security/junior_agent_security/: main.py  mcp_server.py
atoms-core/: .env.example  AGENTS.md  INFRA_OPTIONS.md  SCOPE_AUDIT_CHECKLIST.md  pyproject.toml  requirements_extra.txt
atoms-core/config/: domain.yaml
atoms-core/design/: 040_feed_system_architecture.md
atoms-core/docs/: PLAN_MICROSITE_FACTORY.md  PLAN_REGISTRY_MIGRATION.md  PRODUCTION_CHECKLIST.md  SCOPE_AUDIT_CHECKLIST.md  TECH_SPEC_REGISTRY_MIGRATION.md
atoms-core/docs/infra/: COST_CONTROL.md  INFRASTRUCTURE_MAP.md  JULES_FLATTENING_PROTOCOL.md  JULES_FRESH_START.md  MUSCLE_INFRA.md  MUSCLE_INVENTORY.md  NEXUS_ARCHITECTURE.md  jules_mcp_task.md
atoms-core/docs/plans/: 2026-01-30_architecture_v2_1_plan.md  2026-01-30_connector_factory_atomic_plan.md  2026-01-30_discount_engine_plan.md  2026-01-30_kpi_framework_plan.md  2026-01-30_microsite_upgrade_plan.md  (+2 more)
atoms-core/scripts/: apply_migration.py  check_canvases.py  check_registries.py  check_surfaces.py  inspect_tenants.py  migrate_templates.py  namespace_refactor.py  register_haze.py  run_migration.py  seed_registry.py  sync_canvases.py  sync_connectors.py  sync_generic.py  sync_muscles.py  sync_ui_atoms.py  system_sentinel.py  systematic_lifter.py  verify_discounts.py  verify_nexus_stack.py
atoms-core/sql/: 001_init_registry_crm.sql  002_add_typography_registry.sql  003_storage_buckets.sql  004_nexus_domains.sql  004_nexus_spaces.sql  005_services_registry.sql  006_registry_compute.sql  007_muscle_registry.sql  008_memory_registry.sql  009_add_muscle_status.sql  009_whiteboard_table.sql  011_add_canvas_config.sql  011_complete_registry.sql  013_nexus_domains.sql  014_temperature_config.sql  015_snax_auth_patch.sql  015_snax_auth_patch_uuid.sql  016_discount_engine_uuid.sql  016_firearm_types.sql  017_connector_providers.sql  018_connector_scopes.sql  019_platform_metrics.sql  020_core_kpis.sql  021_firearms_licenses.sql  021_site_templates_registry.sql  022_connector_factory_patch.sql  023_discount_engine.sql  023_tools_registry.sql  024_event_spine_v2.sql  024_kpi_framework_update.sql  025_event_spine_v2_updates.sql  025_ui_atoms_registry.sql  026_add_category_to_muscles.sql  026_production_lines_registry.sql  030_architecture_v2_1.sql  040_feed_system.sql  060_marketplace_payouts.sql  061_merkle_roots.sql  065_human_totp_secrets.sql  066_agent_firearms_grants.sql  (+6 more)
atoms-core/src/: config.py  main.py  surface_normalizer.py
atoms-core/tests/: test_api.py  test_config.py  test_event_spine_flow.py  test_event_spine_v2_updates.py  test_maybes.py
atoms-core/tools/: reindex_universe.py  verify_registry.py
atoms-muscle/: AGENTS.md  Dockerfile  README.md  pyproject.toml
atoms-muscle/.well-known/: agents.json  mcp.json  sitemap.xml
atoms-muscle/scripts/: apply_marketplace_schema.py  apply_snax_patches.py  batch_prepare_deploy.py  factory.py  generate_sitemap.py  inspect_schema.py  normalize_mcp.py  prepare_deploy.py  scaffold_muscle.py  sentinel.py  sync_muscles.py  verify_universal_export.py
atoms-muscle/tests/: test_search_assistant.py
atoms-tuning/: AGENTS.md  pyproject.toml
atoms-tuning/atoms_tuning/: config.py  db.py  ingest.py  main.py  models.py
atoms-tuning/sql/: 001_initial_tuning_schema.sql
atoms-tuning/tests/: test_flow.py
northstar-agents/: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ATOMIC_TASKS.tsv  Agent.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  Skill.md  atomic_agent_report.md  audit_response.md  cli_export.json  forensic_report.md  graphlens_gap_analysis.md  implementation_plan.md  pyproject.toml  recon_tasks.md  research_findings.md  research_prompt.md  task.md  test_preview.html
northstar-agents/docs/: CONSTITUTION.md  SOURCE_OF_TRUTH_MODES.md
northstar-agents/logs/: audit.jsonl
northstar-agents/scripts/: generate_registry.py  scaffold_modes.py  setup_dev.sh
northstar-agents/tests/: patch_test.json
(+5422 files in other folders)
