[project]
name = "atoms-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "supabase>=2.27.2",
    "uvicorn>=0.40.0",
    "lancedb>=0.4.0",
    "pyarrow>=14.0.0",
    "mistralai>=0.1.3",
    "open_clip_torch>=2.24.0",
    "umap-learn>=0.5.5",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "pillow>=10.2.0",
    "faster-whisper>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "numpy>=1.26.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
