[project]
name = "atoms-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "supabase>=2.27.2",
    "uvicorn>=0.40.0",
    "lancedb>=0.4.0",
    "pyarrow>=14.0.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "google-auth>=2.34.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-firestore>=2.11.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
